--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,8 @@
 services:
-  web-app-php:
+  aiden017-database:
     build:
       context: .
-    container_name: web-app-php-service
+    container_name: aide017-database-service
     ports:
       - "8000:8000"
     develop:
@@ -19,31 +19,31 @@ services:
 
   mongodb:
     image: mongo:latest
-    container_name: web-app-php-mongodb
+    container_name: aide017-database-mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: rootPassword
-      MONGO_INITDB_DATABASE: mydatabase
+      MONGO_INITDB_DATABASE: aiden017database
     ports:
-      - "27111:27017"
+      - "21713:27017"
     volumes:
-      - web-app-php-mongodb:/data/db/mongodb
+      - aiden017-database-mongodb:/data/db/mongodb
 
   postgresql:
     image: postgres:15
-    container_name: web-app-php-postgresql
+    container_name: aiden017-database-postgresql
     restart: always
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: aiden017database
     ports:
       - "5112:5432"
     volumes:
-      - web-app-php-postgresql:/data/db/postgresql
+      - aiden017-database-postgresql:/data/db/postgresql
 
 volumes:
-  web-app-php-mongodb:
+  aiden017-database-mongodb:
     driver: local
-  web-app-php-postgresql:
+  aiden017-database-postgresql:
     driver: local
