Refactor: database sqls have been updated. 	modified:   .dockerignore 	modified:   Dockerfile 	modified:   bootstrap.php 	new file:   components/loginForm.component.php 	modified:   composer.json 	renamed:    sql/New Table Auto Increment Script.sql -> database/New Table Auto Increment Script.sql 	renamed:    sql/Old Table Auto Increment.sql -> database/Old Table Auto Increment.sql 	new file:   database/project_users.model.sql 	new file:   database/projects.model.sql 	new file:   database/tasks.model.sql 	new file:   database/users.model.sql 	new file:   errors/unauthorized.error.php 	modified:   handlers/mongodbChecker.handler.php 	modified:   handlers/postgreChecker.handler.php 	modified:   index.php 	new file:   layouts/main.layout.php 	new file:   pages/Login/index.php 	new file:   pages/Logout/index.php 	deleted:    sql/user.model.sql 	deleted:    staticDatas/example.staticData.php 	modified:   utils/dbMigratePostgresql.util.php 	modified:   utils/dbResetPostgresql.util.php 	modified:   utils/dbSeederPostgresql.util.php

--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,26 @@
 {
-    "name": "aiden-auditore/ad-task-3",
-    "description": "ad-task-3 setup",
-    "type": "project",
-    "autoload": {
-        "psr-4": {
-            "AidenAuditore\\AdTask3\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Aiden017",
-            "email": "kentc1322@gmail.com"
-        }
-    ],
-    "require": {
-        "vlucas/phpdotenv": "^5.6"
-    },
-    "scripts": {
-        "postgresql:reset": "php utils/dbResetPostgresql.util.php",
-        "postgresql:seed": "php utils/dbSeederPostgresql.util.php",
-        "postgresql:migrate": "php utils/dbMigratePostgresql.util.php"
+  "name": "aiden-auditore/ad-task-3",
+  "description": "ad-task-3 setup",
+  "type": "project",
+  "autoload": {
+    "psr-4": {
+      "AidenAuditore\\AdTask3\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "Aiden017",
+      "email": "kentc1322@gmail.com"
+    }
+  ],
+  "require": {
+    "vlucas/phpdotenv": "^5.6"
+  },
+  "scripts": {
+    "postgresql:reset": "docker exec aide017-database-service php utils/dbResetPostgresql.util.php",
 
+    "postgresql:seed": "docker exec aide017-database-service php utils/dbSeederPostgresql.util.php",
+
+    "postgresql:migrate": "docker exec aide017-database-service php utils/dbMigratePostgresql.util.php"
+  }
 }
