--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,9 @@
   "require": {
     "vlucas/phpdotenv": "^5.6"
   },
-  "scripts": {
-    "postgresql:reset": "docker exec aide017-database-service php utils/dbResetPostgresql.util.php",
-
-    "postgresql:seed": "docker exec aide017-database-service php utils/dbSeederPostgresql.util.php",
-
-    "postgresql:migrate": "docker exec aide017-database-service php utils/dbMigratePostgresql.util.php"
-  }
+ "scripts": {
+  "postgresql:reset": "docker exec -w /var/www/html aide017-database-service php utils/dbResetPostgresql.util.php",
+  "postgresql:seed": "docker exec -w /var/www/html aide017-database-service php utils/dbSeederPostgresql.util.php",
+  "postgresql:migrate": "docker exec -w /var/www/html aide017-database-service php utils/dbMigratePostgresql.util.php"
+}
 }
